assets/stylesheets/haltr.css
/* Redmine tabular forms, but with div instead of p */

html>body .tabular div {overflow:hidden;}

#payment_stuff, .client_hiden_fields {
  display: inline;
}

ul.menu-rapid li, #sidebar ul li {list-style-type:none;}

th.money, td.money, .money{
  text-align: right;
  white-space: nowrap;
}

.menu-rapid li {
  display: inline-block;
  margin-left: 20px;
}

.menu-rapid ul {
    width: 250px;
    background: white;
    border-radius: 4px 4px 4px 4px;
    box-shadow: 0 0 3px 1px #999999;
    padding: 10px 0;
    position: absolute;
    left: -9999em;
    top: auto;
    z-index: 1000;
    opacity: 0;
    transition: all 250ms ease-in-out 0s;
}
.menu-rapid li:hover ul {
    left: auto;
    opacity: 1;
}
.menu-rapid ul li {
    float: none;
    border-bottom: dashed 1px #FFF;
    padding: 0;
    margin: 0 10px !important;
    display: block;
    font-size: 12px;
}
.menu-rapid ul li a {
    display: block;
    background: none;
    border-radius: none;
    box-shadow: none;
    padding: 5px 0px;
    margin: 0;
    text-shadow: 0 1px 0 #FFFFFF;
    font-size: 14px;
    font-weight: 500;
}

.invoice-navigator {
  float: right !important;
}

.invoice-channel-links h3, .invoice-events h3 {
  border-bottom: 1px dotted #bbb;
}

.invoice-channel-links, .invoice-events {
  margin: 50px;
}

.overlay {
  position:absolute; top:0; left:0;
  width:100%; height:100%;
  /* width: 1138px; height: 1132px; */
  z-index: 1001;
  background: transparent url(../img/overlay.png) 50% 50% repeat;
  opacity: 0.9;
}

.new_client_box {
  position:absolute; top:115px; left:50%;
  margin-left: -325px;
  background-color: white;
  width: 650px;
  z-index: 1002;
  border: 4px solid #333333;
}

#new_client {
  margin: 30px;
}

.mail_box {
  position:absolute; top:200px; left:250px;
  background-color: #FFFFCC;
  width: 650px;
  z-index: 1002;
  border: 4px solid #333333;
  top: -5px;
}

#mail {
  margin: 30px;
}

.amended {
  text-decoration: line-through;
} 

select.tax {
  width: 77px;
}

.lineErrorExplanation {
  border: 2px solid;
  padding: 4px 4px 4px 4px;
  margin: 10px;
}

.lineErrorExplanation a {
  font-weight: bold;
}

.pastdue {
  color: red;
}
.disabled {
  text-decoration: none !important;
  color: #A3A3A3 !important;
}
table#invoice_lines {
  min-width: 50%;
}
.unread {
  font-weight: bold;
}

/* State ribbon */

#invoice_wrapper {
  position: relative;
  overflow: hidden;
}

.ribbon {
  background-color: #555555;
  overflow: hidden;
  white-space: nowrap;
  /* top left corner */
  position: absolute;
  left: -50px;
  top: 40px;
  /* 45 deg ccw rotation */
  -webkit-transform: rotate(-45deg);
     -moz-transform: rotate(-45deg);
      -ms-transform: rotate(-45deg);
       -o-transform: rotate(-45deg);
          transform: rotate(-45deg);
  /* shadow */
  -webkit-box-shadow: 0 0 10px #888;
     -moz-box-shadow: 0 0 10px #888;
          box-shadow: 0 0 10px #888;
}
.ribbon span {
  color: #fff;
  display: block;
  margin: 1px 0;
  padding: 10px 50px;
  text-align: center;
  text-decoration: none;
  /* shadow */
  text-shadow: 0 0 5px #444;
  width: 120px;
}

.ribbon-new, .ribbon-received {
  background-color: yellow;
}
.ribbon-new span, .ribbon-received span {
  color: black;
  text-shadow: 0 0 5px #fff;
}
.ribbon-sent, .ribbon-accepted, .ribbon-closed, .ribbon-paid {
  background-color: green;
}
.ribbon-error, .ribbon-discarded, .ribbon-refused {
  background-color: red;
}
.haltr_event_error {
  color: darkred;
}
.haltr_hidden_event {
  color:#B40404;
}
.cashflow {
  text-align: right;
}
div.audited {
  display: none;
}
div.audited-changes {
  display: none;
  border: 1px solid black;
  position: absolute;
  float: left;
}
div.audited-changes table td {
  padding: 7px;
}
div.audited-changes table tr.new-values {
  background-color: #dfd;
}
div.audited-changes table tr.old-values {
  background-color: #fdd;
}

